@@ -65,6 +65,9 @@ BUGFIXES:
   ZOOKEEPER-498. Unending Leader Elections : WAN configuration (flavio via
   mahadev)
 
+  ZOOKEEPER-508. proposals and commits for DIFF and Truncate messages from the
+  leader to the followers is buggy. (mahadev and ben via mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
